--- a/style.css
+++ b/style.css
@@ -14,12 +14,14 @@ a {
   color: rgb(29, 155, 240);
 }
 main {
-  border: 2px solid white;
+  /* border: 2px solid white; */
   padding: 16px;
   max-width: 600px;
   height: 500px;
-  margin: 0 auto;
+  width: 100%;
+  /* margin: 0 auto; */
 }
+
 p {
   color: white;
 }
@@ -39,6 +41,7 @@ button {
   padding-bottom: 2rem;
 }
 .sub-heading {
+  padding: 20px 0;
   font-size: 23px;
   font-weight: bolder;
   color: white;
